--- a/app/components/ListReservations/ListReservations.latte
+++ b/app/components/ListReservations/ListReservations.latte
@@ -1,3 +1,3 @@
 {foreach $reservations as $reservation}
-    {$reservation->id}
+    {$reservation->id} {$reservation->id_service} {$reservation->id_product}
 {/foreach}    
