--- a/app/presenters/templates/ReserveProduct/default.latte
+++ b/app/presenters/templates/ReserveProduct/default.latte
@@ -1,3 +1,6 @@
 {block content}
+<div id="banner">
+	<h1 n:block=title class="radek text-center">Reserve product</h1>
+</div>
 {control reserveProduct}
 {control listReservations}
