--- a/app/presenters/templates/NewProduct/default.latte
+++ b/app/presenters/templates/NewProduct/default.latte
@@ -1,3 +1,6 @@
 {block content}
+<div id="banner">
+	<h1 n:block=title class="radek text-center">New product</h1>
+</div>
 {control newProduct}
 {control listProducts}
