--- a/app/presenters/templates/ReserveService/default.latte
+++ b/app/presenters/templates/ReserveService/default.latte
@@ -1,3 +1,6 @@
 {block content}
+<div id="banner">
+	<h1 n:block=title class="radek text-center">Reserve service</h1>
+</div>
 {control reserveService}
 {control listReservations}
